# net-gazer-plugin-demo

./: Cargo.toml  README.md
etc/misc/pkg-scripts/: postinst
src/: lib.rs
